reset the css of logo img to fix the gap between navbar and carousel, set body,html,footer css to make footer stay in bottom

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,16 +1,20 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
-
+html{
+    height: 100%;
+}
 body {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  color: #5a5a5a;
+    padding-top: 3rem;
+    padding-bottom: 100px;
+    color: #5a5a5a;
+    min-height: 100%;
+    position: relative;
 }
 
 #logo {
-  max-width: 90px;
-  margin-top:-10px;
+    max-height: 38px;
+    margin: 0 0;
 }
 
 /* CUSTOMIZE THE CAROUSEL
@@ -18,25 +22,27 @@ body {
 
 /* Carousel base class */
 .carousel {
-  margin-bottom: 4rem;
+    margin-bottom: 4rem;
 }
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-  z-index: 10;
-  bottom: 3rem;
+    z-index: 10;
+    bottom: 3rem;
 }
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 32rem;
-  background-color: #777;
+    height: 32rem;
+    background-color: #777;
 }
+
 .carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 32rem;
 }
 
 /* MARKETING CONTENT
@@ -44,63 +50,72 @@ body {
 
 /* Center align the text within the three columns below the carousel */
 .marketing .col-lg-3 {
-  margin-bottom: 1.5rem;
-  text-align: center;
+    margin-bottom: 1.5rem;
+    text-align: center;
 }
+
 .marketing h2 {
-  font-weight: normal;
+    font-weight: normal;
 }
+
 .marketing .col-lg-3 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
+    margin-right: .75rem;
+    margin-left: .75rem;
 }
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
 @media (min-width: 768px) {
-  /* Navbar positioning foo */
-  .navbar-wrapper {
-    margin-top: 20px;
-  }
-  .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  .navbar-wrapper .navbar {
-    padding-right: 0;
-    padding-left: 0;
-  }
+    /* Navbar positioning foo */
+    .navbar-wrapper {
+        margin-top: 20px;
+    }
 
-  /* The navbar becomes detached from the top, so we round the corners */
-  .navbar-wrapper .navbar {
-    border-radius: 4px;
-  }
+    .navbar-wrapper .container {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
 
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-  }
+    .navbar-wrapper .navbar {
+        padding-right: 0;
+        padding-left: 0;
+    }
 
-  .featurette-heading {
-    font-size: 50px;
-  }
+    /* The navbar becomes detached from the top, so we round the corners */
+    .navbar-wrapper .navbar {
+        border-radius: 4px;
+    }
+
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+        margin-bottom: 20px;
+        font-size: 21px;
+        line-height: 1.4;
+    }
+
+    .featurette-heading {
+        font-size: 50px;
+    }
 }
 
 /*
  * Footer
  */
 
-.blog-footer {
-    padding: 2.5rem 0;
-    color: #999;
+footer {
+
     text-align: center;
     background-color: #f9f9f9;
     border-top: .05rem solid #e5e5e5;
+
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
 }
-.blog-footer p:last-child {
+
+footer p:last-child {
     margin-bottom: 0;
 }
 
